肺癌模型更新

--- a/lung_cancer_classifier/logistic_elasticnet_model.ipynb
+++ b/lung_cancer_classifier/logistic_elasticnet_model.ipynb
@@ -17,11 +17,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 69,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-19T05:52:27.604094Z",
-     "start_time": "2019-12-19T05:52:27.599108Z"
+     "end_time": "2019-12-19T09:42:57.771299Z",
+     "start_time": "2019-12-19T09:42:57.752351Z"
     }
    },
    "outputs": [],
@@ -41,11 +41,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 70,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-19T05:52:29.497743Z",
-     "start_time": "2019-12-19T05:52:29.490734Z"
+     "end_time": "2019-12-19T09:42:57.959514Z",
+     "start_time": "2019-12-19T09:42:57.947541Z"
     }
    },
    "outputs": [],
@@ -77,11 +77,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 71,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-19T05:52:30.173223Z",
-     "start_time": "2019-12-19T05:52:30.168236Z"
+     "end_time": "2019-12-19T09:42:58.293770Z",
+     "start_time": "2019-12-19T09:42:58.288784Z"
     }
    },
    "outputs": [],
@@ -99,11 +99,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 72,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-19T06:31:15.602402Z",
-     "start_time": "2019-12-19T06:31:15.588438Z"
+     "end_time": "2019-12-19T09:42:59.163740Z",
+     "start_time": "2019-12-19T09:42:59.144790Z"
     }
    },
    "outputs": [],
@@ -141,11 +141,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 73,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-19T06:40:05.971485Z",
-     "start_time": "2019-12-19T06:40:05.685251Z"
+     "end_time": "2019-12-19T09:43:01.539441Z",
+     "start_time": "2019-12-19T09:43:00.129186Z"
     },
     "scrolled": true
    },
@@ -156,7 +156,7 @@
        "(299, 23)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,6 +173,31 @@
     "stdsc = StandardScaler()\n",
     "df.iloc[:, 1:-1] = pd.DataFrame(stdsc.fit_transform(df.iloc[:, 1:-1].values), columns=df.columns[1:-1])\n",
     "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-19T09:43:23.005688Z",
+     "start_time": "2019-12-19T09:43:22.999705Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(105, 23)"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['class']==1].shape"
    ]
   },
   {
